[package]
name = "fatigue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32"
regex = "1.5"
rayon = "1.5"
rand = "0.8"
approx = "0.5"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
clap = { version = "4.4", features = ["derive"] }
evalexpr = "11.3"
serde_yaml = "0.9"
