[package]
name = "fatigue"
version = "0.1.0"
edition = "2021"

[features]
default = ["cli"]
cli = []
wasm = ["wasm-bindgen"]

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
nalgebra = "0.32"
regex = "1.5"
rayon = "1.5"
rand = "0.8"
approx = "0.5"
toml = "0.8"
evalexpr = "11.3"
serde_yaml = "0.9"
hashbrown = "0.14"
getrandom = { version = "0.2.12", features = ["js"] }
clap = { version = "4.4", features = ["derive"] }
wasm-bindgen = { version = "0.2", optional = true }
csv = "1.1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false # This allows you to use your own test harness, such as Criterion

[[bin]]
name = "fatigue"  # The name of your binary
path = "src/main.rs"  # The new path to your crate root